[package]
name = "mbr"
version = "0.1.0"
edition = "2021"

[dependencies]
cmd = { path = "./cmd" }
anyhow = "1.0.66"
kvproto = { git = "https://github.com/pingcap/kvproto.git"}
futures = "0.3"
hex = {version = "0.3"}
grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec", "nightly"] }
grpcio-health = { version = "0.10", default-features = false, features = ["protobuf-codec"] }
futures-channel = { version = "0.3" }

[workspace]
members = ["./cmd"]

[dependencies.tidb_query_datatype]
default-features = false
git = "https://github.com/tikv/tikv.git"
branch = "release-6.4"

[dependencies.pd_client]
git = "https://github.com/tikv/tikv.git"
default-features = false
branch = "release-6.4"

[patch.crates-io]
# TODO: remove this when new raft-rs is published.
raft = { git = "https://github.com/tikv/raft-rs", branch = "master" }
raft-proto = { git = "https://github.com/tikv/raft-rs", branch = "master" }
protobuf = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }
protobuf-codegen = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }

# This is used for tidb_query_datatype building
crossbeam-deque = { git = "https://github.com/crossbeam-rs/crossbeam", rev = "41ed3d948720f26149b2ebeaf58fe8a193134056" }
