[package]
name = "pd_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tikv-client = { version = "0.1.0" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0.66"
# tikv-client-pd = { version = "0.1.0" }
# tikv-client-proto = { version = "0.1.0" }
